<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/import_memo_file_name_text_view_text"
      />
  <TextView
      android:id="@+id/import_memo_file_name"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:textIsSelectable="true"
      android:text="@string/common_text_unknown_name"
      />
  <Space
      android:layout_width="match_parent"
      android:layout_height="12sp"
      />
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/common_text_new_memo_name"
      android:labelFor="@id/import_memo_name"
      />
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/common_text_memo_name_allows"
      />
  <EditText
      android:id="@+id/import_memo_name"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:singleLine="true"
      android:importantForAutofill="no"
      android:inputType="text"
      android:imeOptions="actionDone"
      />
  <Space
      android:layout_width="match_parent"
      android:layout_height="12sp"
      />
  <Button
      android:id="@+id/import_memo_execute_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/ok_button_text"
      android:onClick="onClickOkButton"
      />
  <Space
      android:layout_width="match_parent"
      android:layout_height="12sp"
      />
  <Switch
      android:id="@+id/import_memo_overwrite_switch"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/import_memo_overwrite_switch_text"
      android:showText="true"
      android:textOff="@string/import_memo_overwrite_switch_textoff"
      android:textOn="@string/import_memo_overwrite_switch_texton"
      />
</LinearLayout>

