<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/delete_service_name_text"
      />
  <TextView
      android:id="@+id/delete_service_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text=""
      />
  <Space
      android:layout_width="match_parent"
      android:layout_height="12sp"
      />
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/delete_service_lastupdate_text"
      />
  <TextView
      android:id="@+id/delete_service_lastupdate"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text=""
      />
  <Space
      android:layout_width="match_parent"
      android:layout_height="12sp"
      />
  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/ok_button_text"
      android:onClick="onClickOkButton"
      />
  <Space
      android:layout_width="match_parent"
      android:layout_height="12sp"
      />
  <Switch
      android:id="@+id/delete_service_execute_switch"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/delete_service_execute_switch_text"
      android:showText="true"
      android:textOff="@string/delete_service_execute_switch_textoff"
      android:textOn="@string/delete_service_execute_switch_texton"
      />
</LinearLayout>

