<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <TextView
      android:id="@+id/change_memo_keyword_memo_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/common_text_unknown_name"
      />
  <Space
      android:layout_width="match_parent"
      android:layout_height="12sp"
      />
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/change_memo_keyword_old_keyword_text"
      android:labelFor="@id/change_memo_keyword_old_keyword"
      />
  <EditText
      android:id="@+id/change_memo_keyword_old_keyword"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:singleLine="true"
      android:importantForAutofill="no"
      android:inputType="text"
      android:imeOptions="actionNext"
      />
  <Space
      android:layout_width="match_parent"
      android:layout_height="12sp"
      />
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/change_memo_keyword_new_keyword_text"
      android:labelFor="@id/change_memo_keyword_new_keyword"
      />
  <EditText
      android:id="@+id/change_memo_keyword_new_keyword"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:singleLine="true"
      android:importantForAutofill="no"
      android:inputType="text"
      android:imeOptions="actionDone"
      />
  <Space
      android:layout_width="match_parent"
      android:layout_height="12sp"
      />
  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/ok_button_text"
      android:onClick="onClickOkButton"
      />
  <Space
      android:layout_width="match_parent"
      android:layout_height="12sp"
      />
  <Switch
      android:id="@+id/change_memo_keyword_execute_switch"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/change_memo_keyword_execute_switch_text"
      android:showText="true"
      android:textOff="@string/change_memo_keyword_execute_switch_textoff"
      android:textOn="@string/change_memo_keyword_execute_switch_texton"
      />
</LinearLayout>

