<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/export_service_name_text"
      />
  <TextView
      android:id="@+id/export_service_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textIsSelectable="true"
      android:text=""
      />
  <Space
      android:layout_width="match_parent"
      android:layout_height="12sp"
      />
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/export_service_lastupdate_text"
      />
  <TextView
      android:id="@+id/export_service_lastupdate"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text=""
      />
  <Space
      android:layout_width="match_parent"
      android:layout_height="12sp"
      />
  <Button
      android:id="@+id/copy_export_keyword_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/copy_export_keyword_button_text"
      android:onClick="onClickCopyKeywordButton"
      />
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/export_keyword_text"
      />
  <TextView
      android:id="@+id/export_keyword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textIsSelectable="true"
      android:text=""
      />
  <Space
      android:layout_width="match_parent"
      android:layout_height="12sp"
      />
  <Button
      android:id="@+id/copy_export_data_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/copy_export_data_button_text"
      android:onClick="onClickCopyDataButton"
      />
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/export_data_text"
      />
  <TextView
      android:id="@+id/export_data"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textIsSelectable="true"
      android:singleLine="false"
      android:text=""
      />
</LinearLayout>

