<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/old_value_type_text"
      />
  <TextView
      android:id="@+id/old_value_type"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text=""
      />
  <Space
      android:layout_width="match_parent"
      android:layout_height="12sp"
      />
  <TextView
      android:id="@+id/old_value_value_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/old_value_value_text"
      />
  <TextView
      android:id="@+id/old_value_value"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textIsSelectable="true"
      android:text=""
      />
  <Space
      android:layout_width="match_parent"
      android:layout_height="12sp"
      />
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/edit_new_value_type_text"
      android:labelFor="@id/edit_new_value_type"
      />
  <Space
      android:layout_width="match_parent"
      android:layout_height="12sp"
      />
  <Spinner
      android:id="@+id/edit_new_value_type"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      />
  <Space
      android:layout_width="match_parent"
      android:layout_height="12sp"
      />
  <TextView
      android:id="@+id/edit_new_value_value_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/edit_new_value_value_text"
      android:labelFor="@id/edit_new_value_value"
      />
  <Space
      android:layout_width="match_parent"
      android:layout_height="12sp"
      />
  <EditText
      android:id="@+id/edit_new_value_value"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:singleLine="true"
      android:importantForAutofill="no"
      android:inputType="text"
      android:imeOptions="actionDone"
      />
  <Space
      android:layout_width="match_parent"
      android:layout_height="12sp"
      />
  <Button
      android:id="@+id/edit_value_execute_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/ok_button_text"
      android:onClick="onClickOkButton"
      />
</LinearLayout>

